avance 52